готова сетка для макета && исправил замечания линтера

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -22,6 +22,8 @@
     "at-rule-semicolon-space-before": "never",
     "selector-max-class": 2,
     "unit-allowed-list": [
+      "fr",
+      "deg",
       "em",
       "rem",
       "%",
